# EchoFmt

./: .gitignore  CMakeLists.txt  README.md  setup_llvm.sh  test_llvm.sh
benchmarks/: benchmark.cc
include/: base_define.h  echofmt.h
support/cmake/: echofmt-config.cmake.in  linux.llvm.toolchain.cmake
support/script/: benchmarks.sh  tests.sh
tests/: test.cc
